# mobility-vla

./: .gitignore  2407.07775v2.html  pyproject.toml
.codex/: config.toml
data/sceaux_colmap/: poses.txt
docs/: README.md
mobility_vla/: __init__.py  colmap_io.py  control.py  graph.py  high_level.py  localization.py  navigation.py  pipeline.py  qwen.py  state.py  tour.py  types.py
mobility_vla.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: demo.py  demo_colmap_pipeline.py  run_iphone_colmap_pipeline.py  run_pycolmap_sfm.py
tests/: test_colmap_loader.py  test_pipeline.py
