[project]
name = "mobility-vla"
version = "0.1.0"
description = "MobilityVLA reference implementation for multimodal tour-based navigation."
readme = "docs/README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.10.1",
    "bitsandbytes>=0.48.1",
    "numpy>=1.26.0",
    "pycolmap>=3.12.6",
    "transformers>=4.57.0",
]

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mobility_vla"]
